[package]
name = "osc-handler"
version = "0.1.0"
edition = "2021"
categories = ["network-programming"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#OSC library
rosc = { version = "0.11.4" , optional = true }
nom = { version = "7" , optional = true }
#logging
log = "0.4"
#Sorted vec according to a timestamp.
#This is used to sort to be applied bundles according to their timestamps.
#This theoretically speeds up checking what bundles to apply, since it can now
#find the bundles to apply in O(log n) instead of O(n). (binary search instead checking every bundle)
time = "0.3"
sorted-vec = "0.8"

#We allow an async handler function.
tokio =  { version = "1", features = [
    "rt", #JoinSet
    "net", #UDP Sockets
    "io-util", #recv_buf for udp sockets
    "time", #time
    "macros", #select
], optional = true}

[features]
osc = ["dep:nom", "dep:rosc"]
debug_log = []
std = ["osc"]
tokio = ["std", "dep:tokio"]